# AgentAi-workshop

3_crew/coder/output/: code_and_output.txt
3_crew/coder/src/coder/: main.py
3_crew/coderUI/output/: code_and_output.txt
3_crew/coderUI/src/coder/: crew.py  main.py
3_crew/coderUI/src/coder/config/: tasks.yaml
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate1/: README.md  pyproject.toml
3_crew/debate1/src/debate1/: crew.py  main.py
3_crew/debate1/src/debate1/config/: agents.yaml
3_crew/dynamictasks/: README.md  pyproject.toml
3_crew/dynamictasks/src/dynamictasks/: crew.py  main.py  tasks.py
3_crew/dynamictasks/src/dynamictasks/config/: agents.yaml
3_crew/engineering_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/config/: agents.yaml
