[project]
name = "debate1"
version = "0.1.0"
description = "debate1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
debate1 = "debate1.main:run"
run_crew = "debate1.main:run"
train = "debate1.main:train"
replay = "debate1.main:replay"
test = "debate1.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
