[project]
name = "dynamictasks"
version = "0.1.0"
description = "dynamictasks using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.134.0,<1.0.0"
]

[project.scripts]
dynamictasks = "dynamictasks.main:run"
run_crew = "dynamictasks.main:run"
train = "dynamictasks.main:train"
replay = "dynamictasks.main:replay"
test = "dynamictasks.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
